# orbital_challenge

./: .flake8  Dockerfile  README.md  extract.py  pyproject.toml
lease_schedule/: __init__.py  models.py  parser.py
tests/: test_parse_entry.py
