[tool.poetry]
name = "orbital"
version = "0.1.0"
description = "Tech challenge"
authors = ["Miguel Aveiro <miguel.aveiro@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
ijson = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
