[tool.poetry]
name = "orbital"
version = "0.1.0"
description = "Tech challenge"
authors = ["Miguel Aveiro <miguel.aveiro@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
ijson = "^3.1.3"
typer = "^0.3.2"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
wemake-python-styleguide = "^0.14.1"
mypy = "^0.790"
pudb = "^2019.2"
pytest = "^6.2.0"

[tool.isort]
profile = "black"
reverse_relative = true

[tool.black]
line-length = 79
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

